Bruno tests and test automation settings
